# MASFactory

./: .gitignore  pyproject.toml
applications/mapcoder/: README.md
applications/mapcoder/components/: tester.py
applications/mapcoder/humaneval/: dataset.py  runner.py
applications/mapcoder/mock_tests/: test_dataset.py  test_graph_e2e_mock.py  test_tester_node.py
applications/mapcoder/workflows/: controllers.py  graph.py
applications/sparse_mad_reproduction/: README.md  requirements.txt
applications/sparse_mad_reproduction/docs/: reproduction_report.md
applications/sparse_mad_reproduction/examples/: compare_topologies.py  run_dry_demo.py  run_llm_demo.py  run_visual_workflow.py  show_agent_topology_visual.py  show_hex_topology_visual.py
applications/sparse_mad_reproduction/sparse_mad/: __init__.py  agent_topology_hex_visual.py  agent_topology_static_visual.py  agent_topology_visual.py  datasets.py  dry_runner.py  experiment.py  hf_datasets.py  llm_runner.py  metrics.py  topology.py  visual_workflow.py  voting.py  workflow.py
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/src/: api_reference.md
docs/src/guide/: compatibility.md  concepts.md  context_adapters.md
docs/src/zh/: api_reference.md
masfactory/compatibility/: __init__.py  errors.py  paths.py
masfactory/compatibility/chatdev/: __init__.py  api.py  graph.py  materialize.py  parse.py  runtime.py  template.py
masfactory/compatibility/common/: __init__.py  blueprint.py  builder.py  conditions.py  discover.py  graph_design_export.py  io.py  llm_options.py  loaders.py  loops.py  names.py  output_root.py  runtime.py  wire_loops.py  workflow_parse.py
masfactory/compatibility/dify/: __init__.py  api.py  extra_nodes.py  materialize.py  models.py  node_kinds.py  options.py  parse.py  root_graph.py  runtime.py  template.py
(+11 files in other folders)
