[project]
name = "masfactory"
version = "1.0.4"
description = "MASFactory is a graph-centric framework for orchestrating Multi-Agent Systems with Vibe Graphing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.58.2",
    "docstring-parser>=0.17.0",
    "google-genai>=1.26.0",
    "numpy>=2.2.6",
    "openai>=1.97.0",
    "tenacity>=8.0.0",
    "tiktoken>=0.7.0",
]
[build-system]                                                                                                                                                                                                           
requires = ["setuptools>=77", "wheel"]                                                                                                                                                                                   
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
]
embeddings = [
    "sentence-transformers>=2.7.0",
    "scikit-learn>=1.4.0",
    "transformers>=4.40.0",
    "tiktoken>=0.7.0",
]
apps = [
    "colorama>=0.4.6",
    "datasets>=2.0.0",
    "diffusers>=0.30.0",
    "huggingface-hub>=0.24.0",
    "human-eval>=1.0.3",
    "markdown>=3.6",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "psutil>=5.9.0",
    "pydub>=0.25.1",
    "pyyaml>=6.0.2",
    "requests>=2.31.0",
    "spacy>=3.7.0",
    "tqdm>=4.66.0",
]
[tool.setuptools.packages.find]
where = ["."] 
include = ["masfactory*"]
exclude = [
    "applications*",
    "docs*",
    "masfactory-visualizer*",
    "testfile*",
    "tests*",
    "dist*",
    "build*",
    "vibe_test*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: opt-in integration tests requiring network+credentials",
]
